--- a/src/style/sass/_home.scss
+++ b/src/style/sass/_home.scss
@@ -20,6 +20,9 @@
   .hero-content {
     margin-top: 18%;
     color: #fff;
+    @media #{$large} {
+      margin-top: 13%;
+    }
     > h1 {
       text-transform: uppercase;
       font-weight: 600;
@@ -47,5 +50,45 @@
   transition: 0.3s;
   &:hover {
     background: #013648;
+  }
+}
+.hero-arrow {
+  color: #fff;
+  position: absolute;
+  bottom: 75px;
+  left: 50%;
+  display: block;
+  width: 25px;
+  height: 25px;
+  border: 1px solid #fff;
+  transition: 0.3s;
+  &:hover {
+    background-color: #fff;
+    > a {
+      color: #000;
+    }
+  }
+  > a {
+    text-decoration: none;
+    color: #fff;
+    > svg {
+      display: block;
+      width: 100%;
+      height: 100%;
+      padding: 2px;
+      animation: animateHeroArrow 1.5s infinite;
+    }
+  }
+}
+
+@keyframes animateHeroArrow {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(0.8);
+  }
+  100% {
+    transform: scale(1);
   }
 }
