--- a/src/style/sass/_about.scss
+++ b/src/style/sass/_about.scss
@@ -3,5 +3,23 @@
   height: 100vh;
   padding: 100px;
 }
-#about .about-image-wrapper {
+#about .about-content-wrapper {
+  > p {
+    font-size: 1rem;
+    font-family: "Lato", sans-serif;
+    font-weight: 300;
+    > span {
+      color: #013648;
+      font-weight: 400;
+    }
+    > a {
+      color: grey;
+      text-decoration: none;
+      transition: 0.3s;
+      &:hover {
+        text-decoration: none;
+        color: #111;
+      }
+    }
+  }
 }
