--- a/src/style/sass/_about.scss
+++ b/src/style/sass/_about.scss
@@ -9,7 +9,7 @@
     font-family: "Lato", sans-serif;
     font-weight: 300;
     > span {
-      color: #013648;
+      color: $blue;
       font-weight: 400;
     }
     > a {
