fix CSS on about, skills & tools sections

--- a/src/style/sass/_skills&tools.scss
+++ b/src/style/sass/_skills&tools.scss
@@ -1,7 +1,9 @@
 .reusable-container {
   width: 100%;
-  height: 100vh;
   padding: 100px 0 90px;
+  @media #{$desktop} {
+    height: 100vh;
+  }
 }
 .reusable-top-section {
   h2 {
