--- a/src/style/sass/_about.scss
+++ b/src/style/sass/_about.scss
@@ -1,9 +1,16 @@
 #about {
   width: 100%;
-  height: 100vh;
-  padding: 100px;
+  padding-top: 15px;
+  @media #{$desktop} {
+    padding: 100px;
+    height: 100vh;
+  }
 }
 #about .about-content-wrapper {
+  padding-top: 15px;
+  @media #{$desktop} {
+    padding-top: 0;
+  }
   > p {
     font-size: 1rem;
     font-family: "Lato", sans-serif;
