--- a/src/style/sass/_about.scss
+++ b/src/style/sass/_about.scss
@@ -25,7 +25,7 @@
       transition: 0.3s;
       &:hover {
         text-decoration: none;
-        color: #111;
+        color: $blue;
       }
     }
   }
