--- a/src/style/sass/_home.scss
+++ b/src/style/sass/_home.scss
@@ -68,9 +68,10 @@
   height: 25px;
   border: 1px solid #fff;
   transition: 0.3s;
+  cursor: pointer;
   &:hover {
     background-color: #fff;
-    > a {
+    > a > svg {
       color: #000;
     }
   }
