adding ScrollToTop Button

--- a/src/style/sass/_footer.scss
+++ b/src/style/sass/_footer.scss
@@ -20,7 +20,7 @@ footer {
           transform: scale(1.3);
         }
         &:hover {
-          color: $blue;
+          color: #111;
         }
       }
       > p {
