--- a/src/style/sass/main.scss
+++ b/src/style/sass/main.scss
@@ -4,6 +4,7 @@
 @import "./skills&tools";
 @import "./contact";
 @import "./footer";
+@import "./projects";
 .scroll-to-top-button {
   position: fixed;
   bottom: 50px;
