--- a/src/style/sass/_about.scss
+++ b/src/style/sass/_about.scss
@@ -10,6 +10,9 @@
   @media #{$desktop} {
     padding-top: 0;
   }
+  > h2 {
+    font-weight: 700;
+  }
   > p {
     font-size: 1rem;
     font-family: "Lato", sans-serif;
