--- a/src/style/sass/_contact.scss
+++ b/src/style/sass/_contact.scss
@@ -1,10 +1,11 @@
 #contact {
-  padding-top: 100px;
+  /*padding-top: 100px;*/
   padding-bottom: 90px;
 }
 .form-wrapper {
   > h2 {
     font-size: 2.875rem;
+    font-weight: 700;
   }
   > form {
     input {
@@ -27,6 +28,7 @@
 .contact-info-wrapper {
   > h2 {
     font-size: 2.875rem;
+    font-weight: 700;
   }
   > p {
     font-family: "Lato", sans-serif;
