--- a/src/style/sass/_home.scss
+++ b/src/style/sass/_home.scss
@@ -35,10 +35,31 @@
       @media #{$tablet} {
         font-size: 4rem;
       }
+      .wiggly-font {
+        display: inline-block;
+        width: max-content;
+        padding: 0 2px;
+        &:hover {
+          animation: wiggle 0.6s;
+        }
+      }
+
+      @keyframes wiggle {
+        25% {
+          transform: scale(1.2, 0.8);
+        }
+        50% {
+          transform: scale(0.8, 1.2);
+        }
+        75% {
+          transform: scale(1.3, 0.8);
+        }
+      }
     }
     .heroAnim-wrapper {
-      > span {
+      > p {
         text-transform: uppercase;
+        margin: 0;
       }
     }
   }
