--- a/src/style/sass/_projects.scss
+++ b/src/style/sass/_projects.scss
@@ -12,12 +12,19 @@
     font-weight: 300;
   }
 }
-.projects-wrapper .project-item-wrapper {
-  margin: 15px 0;
+.projects-wrapper {
+  justify-content: center;
+  .project-item-wrapper {
+    width: 350px;
+    height: 350px;
+    float: left;
+    padding: 15px;
+  }
 }
 .projects-wrapper .project-item {
   position: relative;
   width: 100%;
+  height: 100%;
   &:hover {
     > .project-item-image {
       > img {
@@ -53,22 +60,7 @@
     text-align: center;
     padding-left: 10px;
     padding-right: 10px;
-    padding-top: 5px;
-    @media screen and (min-width: 400px) {
-      padding-top: 10%;
-    }
-    @media #{$mobile} {
-      padding-top: 15%;
-    }
-    @media #{$tablet} {
-      padding-top: 5%;
-    }
-    @media #{$desktop} {
-      padding-top: 5px;
-    }
-    @media #{$large} {
-      padding-top: 10%;
-    }
+    padding-top: 20%;
     > h3 {
       color: #fff;
     }
