--- a/src/style/sass/main.scss
+++ b/src/style/sass/main.scss
@@ -40,3 +40,16 @@
     }
   }
 }
+.login {
+  width: 100%;
+  height: 100vh;
+  > svg {
+    position: fixed;
+    top: 45%;
+    right: 50%;
+    transform: scale(5);
+    &:hover {
+      cursor: pointer;
+    }
+  }
+}
