--- a/src/style/sass/main.scss
+++ b/src/style/sass/main.scss
@@ -5,6 +5,7 @@
 @import "./contact";
 @import "./footer";
 @import "./projects";
+@import "./admin";
 .scroll-to-top-button {
   position: fixed;
   bottom: 50px;
