--- a/src/style/sass/_home.scss
+++ b/src/style/sass/_home.scss
@@ -64,7 +64,8 @@
     }
   }
 }
-.heroBtn-resume {
+.heroBtn-resume,
+.linkBtn {
   border: none;
   margin-top: 15px;
   padding: 10px 20px;
@@ -77,6 +78,12 @@
   transition: 0.3s;
   &:hover {
     background: $blue;
+  }
+}
+.linkBtn {
+  &:hover {
+    text-decoration: none;
+    color: #fff;
   }
 }
 .hero-arrow {
